# kaggle_assistant

./: .env.example  README.md  conda-lock.yml  environment.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.py
src/kaggle_src/: dummy_notebook_kaggle.ipynb  install_command.sh  open_ngrok_ssh_kaggle.ipynb
